tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-typed-struct-constructor.wyst
module removed_typed_struct_constructor

struct Value { raw: u64 }

fn bad() {
    const value: Value = Value(raw = 1)
}
